@@ -140,6 +140,7 @@ if ( !is_dir($DIR_PACKAGE_RELEASE) ) {
 }
 copyDir($DIR_PACKAGE_SOURCE, $DIR_PACKAGE_RELEASE);
 copyFile("license.txt", $DIR_RELEASE.$PATH_SEPARATOR.$PACKAGE.$PATH_SEPARATOR."license.txt");
+copyFile("copyright.txt", $DIR_RELEASE.$PATH_SEPARATOR.$PACKAGE.$PATH_SEPARATOR."copyright.txt");
 $CHANGELOG_FILE = $PACKAGE.$PATH_SEPARATOR.$PACKAGE_PHP_VERSION.$PATH_SEPARATOR."ChangeLog.txt";
 if ( is_file($CHANGELOG_FILE) ) {
     copyFile($CHANGELOG_FILE, $DIR_RELEASE.$PATH_SEPARATOR.$PACKAGE.$PATH_SEPARATOR."ChangeLog.txt");
